--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
 readme = "README.md"
 dynamic = ["version", "description"]
 dependencies = [
-    "nbproject",
+    "lamindb[bionty,lamin1]>=0.41a5",
+    "celltypist",
+    "gseapy",
 ]
 
 [project.urls]
