--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           python -m pip install -U pip
           pip install -U laminci
-          pip install -U lamindb
+          pip install -U lamindb>=0.41a5
       - name: Install apt-get dependencies
         run: |
           sudo apt-get -y install graphviz
@@ -80,11 +80,6 @@ jobs:
       - name: Build
         run: |
           nox -s build --python ${{ matrix.python-version }}
-      - name: Codecov
-        if: matrix.python-version == '3.9'
-        uses: codecov/codecov-action@v2
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
       - name: Deploy docs
         if: matrix.python-version == '3.9'
         id: netlify
