--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,8 +60,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install -U pip
-          pip install -U laminci
-          pip install -U lamindb>=0.41a5
+          pip install lamindb>=0.41a5
       - name: Install apt-get dependencies
         run: |
           sudo apt-get -y install graphviz
