--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,11 +35,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: "pip"
           cache-dependency-path: ".github/workflows/build.yml" # See dependencies below
-      - name: Cache nox
-        uses: actions/cache@v3
-        with:
-          path: .nox
-          key: nox-${{ runner.os }}
       - name: Cache pre-commit
         uses: actions/cache@v3
         with:
@@ -60,11 +55,10 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install -U pip
-          pip install -U lamindb
+          pip install -U laminci
       - name: Install apt-get dependencies
         run: |
           sudo apt-get -y install graphviz
-          sudo apt-get install sqlite3-tools=3.37.2-2
           sudo apt-get install libpq-dev
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v2
@@ -72,13 +66,8 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1
-      - name: Lint
-        if: matrix.python-version == '3.9'
-        run: |
-          nox -s lint
-      - name: Build
-        run: |
-          nox -s build --python ${{ matrix.python-version }}
+      - run: nox -s install
+      - run: nox -s build
       - name: Deploy docs
         if: matrix.python-version == '3.9'
         id: netlify
