--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
 readme = "README.md"
 dynamic = ["version", "description"]
 dependencies = [
-    "lamindb[bionty,lamin1]>=0.42a1",
+    "lamindb[bionty,lamin1]==0.42a3",
     "celltypist",
     "gseapy",
     "scanpy",
