--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,7 @@ dependencies = [
     "lamindb[bionty,nbproject]==0.42a4",
     "celltypist",
     "gseapy",
-    "scanpy",
-    "cite2c"
+    "scanpy"
 ]
 
 [project.urls]
