--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dynamic = ["version", "description"]
 dependencies = [
     "celltypist",
     "gseapy",
-    "scanpy",
+    "scanpy"
 ]
 
 [project.urls]
