--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,15 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Notify slack success
+        if: success()
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_GITHUB_ACTION }}
+        uses: voxmedia/github-action-slack-notify-build@v1
+        with:
+          channel: lamindb-tests
+          status: SUCCESS
+          color: good
       - name: Checkout lndocs
         uses: actions/checkout@v3
         with:
