--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,19 +20,19 @@ jobs:
     timeout-minutes: 15
 
     steps:
+      - uses: voxmedia/github-action-slack-notify-build@v1
+        if: success()
+        id: slack
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_GITHUB_ACTION }}
+        with:
+          channel: lamindb-tests
+          status: STARTING
+          color: warning
       - name: Checkout main
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Notify slack success
-        if: success()
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_GITHUB_ACTION }}
-        uses: voxmedia/github-action-slack-notify-build@v1
-        with:
-          channel: lamindb-tests
-          status: SUCCESS
-          color: good
       - name: Checkout lndocs
         uses: actions/checkout@v3
         with:
@@ -79,6 +79,23 @@ jobs:
           aws-region: eu-central-1
       - run: nox -s install
       - run: nox -s build
+      - uses: voxmedia/github-action-slack-notify-build@v1
+        if: success()
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_GITHUB_ACTION }}
+        with:
+          channel: lamindb-tests
+          status: SUCCESS
+          color: good
+          message_id: ${{ steps.slack.outputs.message_id }}
+      - uses: voxmedia/github-action-slack-notify-build@v1
+        if: failure()
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_GITHUB_ACTION }}
+        with:
+          channel: lamindb-tests
+          status: FAILURE
+          color: danger
       - name: Deploy docs
         if: matrix.python-version == '3.9'
         id: netlify
