--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dynamic = ["version", "description"]
 dependencies = [
     "celltypist",
     "gseapy",
-    "scanpy"
+    "scanpy",
+    "scikit-learn<1.3.0", # for celltypist
 ]
 
 [project.urls]
