🚚 Rename repository to lamin-usecases

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,7 +39,7 @@ repos:
       - id: nbstripout
         exclude: |
           (?x)(
-              docs/examples/|
+              docs/usecases/|
               docs/notes/
           )
   - repo: https://github.com/Lucas-C/pre-commit-hooks
