--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "lamin_examples"
+name = "lamin_usecases"
 authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
 readme = "README.md"
 dynamic = ["version", "description"]
@@ -14,7 +14,7 @@ dependencies = [
 ]
 
 [project.urls]
-Home = "https://github.com/laminlabs/lamin-examples"
+Home = "https://github.com/laminlabs/lamin-usecases"
 
 [project.optional-dependencies]
 dev = [
@@ -35,5 +35,5 @@ testpaths = [
 
 [tool.coverage.run]
 omit = [
-    "lamin_examples/*",
+    "lamin_usecases/*",
 ]
