--- a/.gitignore
+++ b/.gitignore
@@ -107,7 +107,15 @@ lamin_sphinx
 docs/conf.py
 _docs_tmp*
 *.h5ad
+*.h5mu
+*.tiff
+*.fcs
 data/
 celltypist/
 enrichr/
 analysis-usecase/
+test-flow/
+test-scrna/
+test-registries/
+test-multimodal/
+test-spatial/
