--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
     types: [build]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     env:
       GITHUB_EVENT_NAME: ${{ github.event_name }}
@@ -17,27 +17,21 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9"]
+        group:
+          - "datatype"
+          - "bioregistry"
     timeout-minutes: 15
 
     steps:
-      - name: Checkout main
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Checkout lndocs
-        uses: actions/checkout@v3
-        with:
-          repository: laminlabs/lndocs
-          ssh-key: ${{ secrets.READ_LNDOCS }}
-          path: lndocs
-          ref: main
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           cache: "pip"
-          cache-dependency-path: ".github/workflows/build.yml" # See dependencies below
-      - name: Cache pre-commit
+          cache-dependency-path: ".github/workflows/build.yml"
+      - name: cache pre-commit
         uses: actions/cache@v3
         with:
           path: ~/.cache/pre-commit
@@ -54,22 +48,24 @@ jobs:
       - name: Cache postgres use
         if: steps.cache-postgres.outputs.cache-hit == 'true'
         run: docker image load --input ~/postgres.tar
-      - name: Install Python dependencies
+      - name: install Python deps
         run: |
           python -m pip install -U pip
           pip install -U laminci
-      - name: Install apt-get dependencies
+      - name: install postgres graphviz
         run: |
           sudo apt-get -y install graphviz
           sudo apt-get install libpq-dev
-      - name: Configure AWS
-        uses: aws-actions/configure-aws-credentials@v2
+      - run: nox -s lint
+        if: ${{ matrix.python-version == '3.9' && matrix.group == 'unit' }}
+      - run: nox -s "install(group='${{ matrix.group }}')"
+      - run: nox -s "build(group='${{ matrix.group }}')"
+      - name: upload docs
+        if: ${{ matrix.group == 'datatype' || matrix.group == 'bioregistry' }}
+        uses: actions/upload-artifact@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-central-1
-      - run: nox -s install
-      - run: nox -s build
+          name: docs-${{ matrix.group }}
+          path: ./docs/${{ matrix.group }}
       - uses: voxmedia/github-action-slack-notify-build@v1
         if: success()
         env:
@@ -86,10 +82,39 @@ jobs:
           channel: lamindb-tests
           status: FAILURE
           color: danger
-      - name: Deploy docs
-        if: matrix.python-version == '3.9'
-        id: netlify
-        uses: nwtgck/actions-netlify@v1.2
+
+  docs:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: checkout lndocs
+        uses: actions/checkout@v3
+        with:
+          repository: laminlabs/lndocs
+          ssh-key: ${{ secrets.READ_LNDOCS }}
+          path: lndocs
+          ref: main
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+          cache: "pip"
+          cache-dependency-path: ".github/workflows/build.yml"
+      - name: install Python deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install laminci
+      - run: nox -s "install(group='docs')"
+      - uses: actions/download-artifact@v2
+      - run: nox -s docs
+      - uses: nwtgck/actions-netlify@v1.2
         with:
           publish-dir: "_build/html"
           production-deploy: ${{ github.event_name == 'push' }}
