--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,6 +57,10 @@ repos:
     rev: v0.940
     hooks:
       - id: mypy
+        exclude: |
+          (?x)(
+              test_notebooks.py
+          )
   - repo: https://github.com/pycqa/pydocstyle
     rev: 6.1.1
     hooks:
