--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9"]
+        python-version: ["3.10"]
         group:
           - "by_datatype"
           - "by_registry"
+          - "by_ontology"
     timeout-minutes: 15
 
     steps:
@@ -31,11 +32,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: "pip"
           cache-dependency-path: ".github/workflows/build.yml"
+
       - name: cache pre-commit
         uses: actions/cache@v3
         with:
           path: ~/.cache/pre-commit
           key: pre-commit-${{ runner.os }}-${{ hashFiles('.pre-commit-config.yaml') }}
+
       - name: Cache postgres
         id: cache-postgres
         uses: actions/cache@v3
@@ -48,20 +51,24 @@ jobs:
       - name: Cache postgres use
         if: steps.cache-postgres.outputs.cache-hit == 'true'
         run: docker image load --input ~/postgres.tar
+
       - name: install Python deps
         run: |
           python -m pip install -U pip
           pip install -U laminci
+
       - name: install postgres graphviz
         run: |
           sudo apt-get -y install graphviz
           sudo apt-get install libpq-dev
+
       - run: nox -s lint
-        if: ${{ matrix.python-version == '3.9' && matrix.group == 'unit' }}
+        if: ${{ matrix.python-version == '3.10' && matrix.group == 'unit' }}
       - run: nox -s "install(group='${{ matrix.group }}')"
       - run: nox -s "build(group='${{ matrix.group }}')"
+
       - name: upload docs
-        if: ${{ matrix.group == 'by_datatype' || matrix.group == 'by_registry' }}
+        if: ${{ matrix.group == 'by_datatype' || matrix.group == 'by_registry' || matrix.group == 'by_ontology'}}
         uses: actions/upload-artifact@v2
         with:
           name: docs_${{ matrix.group }}
@@ -88,13 +95,15 @@ jobs:
           aws-region: us-east-1
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: 3.10
           cache: "pip"
           cache-dependency-path: ".github/workflows/build.yml"
+
       - name: install Python deps
         run: |
           python -m pip install --upgrade pip
           pip install laminci
+
       - run: nox -s "install(group='docs')"
       - uses: actions/download-artifact@v2
       - run: nox -s docs
