--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,11 @@ jobs:
         run: |
           sudo apt-get -y install graphviz
           sudo apt-get install libpq-dev
-
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
       - run: nox -s lint
         if: ${{ matrix.python-version == '3.10' && matrix.group == 'unit' }}
       - run: nox -s "install(group='${{ matrix.group }}')"
