--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,40 +1,22 @@
+fail_fast: false
+default_language_version:
+  python: python3
+default_stages:
+  - commit
+  - push
+minimum_pre_commit_version: 2.16.0
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
-    hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
-        exclude: |
-          (?x)(
-              .github/workflows/latest-changes.jinja2
-          )
-      - id: check-yaml
-      - id: check-added-large-files
-  - repo: https://github.com/psf/black
-    rev: 22.6.0
-    hooks:
-      - id: black-jupyter
-  - repo: https://github.com/pycqa/flake8
-    rev: 4.0.1
-    hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-black==0.3.3
-          - flake8-typing-imports==1.10.0
-        language_version: python3
-        args:
-          - --max-line-length=88
-          - --ignore=E203,E501,W503,BLK100
-        exclude: |
-          (?x)(
-              __init__.py
-          )
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.6.2
+    rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
+        exclude: |
+          (?x)(
+            docs/changelog.md|
+            entity_generation
+          )
   - repo: https://github.com/kynan/nbstripout
-    rev: 0.3.9
+    rev: 0.6.1
     hooks:
       - id: nbstripout
         exclude: |
@@ -42,34 +24,47 @@ repos:
               docs/usecases/|
               docs/notes/
           )
-  - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.1.9
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.7
     hooks:
-      - id: forbid-crlf
-      - id: remove-crlf
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-        name: isort (python)
-        args: ["--profile", "black"]
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.940
-    hooks:
-      - id: mypy
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix, --unsafe-fixes]
         exclude: |
           (?x)(
-              test_notebooks.py
+            entity_generation
           )
-  - repo: https://github.com/pycqa/pydocstyle
-    rev: 6.1.1
+      - id: ruff-format
+        exclude: |
+          (?x)(
+            entity_generation
+          )
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
     hooks:
-      - id: pydocstyle
-        args: # google style + __init__, see http://www.pydocstyle.org/en/stable/error_codes.html
-          - --ignore=D100,D101,D102,D103,D106,D107,D203,D204,D213,D215,D400,D401,D403,D404,D406,D407,D408,D409,D412,D413
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
+      - id: detect-private-key
+      - id: check-ast
+        exclude: |
+          (?x)(
+            entity_generation
+          )
+      - id: end-of-file-fixer
+        exclude: |
+          (?x)(
+              .github/workflows/latest-changes.jinja2
+            )
+      - id: mixed-line-ending
+        args: [--fix=lf]
+      - id: trailing-whitespace
+      - id: check-case-conflict
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.7.1
     hooks:
-      - id: pyupgrade
-        description: Automatically upgrade syntax for newer versions.
-        args: [--py38-plus]
+      - id: mypy
+        args: [--no-strict-optional, --ignore-missing-imports]
+        additional_dependencies:
+          ["types-pkg-resources", "types-requests", "types-attrs"]
+        exclude: |
+          (?x)(
+              test_notebooks.py|
+              entity_generation
+          )
