Fix Slack channel

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,7 +136,7 @@ jobs:
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_GITHUB_ACTION }}
         with:
-          channel: lamindb-tests
+          channel: lamindb-mirror-github-actions
           status: SUCCESS
           color: good
       - uses: voxmedia/github-action-slack-notify-build@v1
@@ -144,6 +144,6 @@ jobs:
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_GITHUB_ACTION }}
         with:
-          channel: lamindb-tests
+          channel: lamindb-mirror-github-actions
           status: FAILURE
           color: danger
