--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,9 +101,7 @@ jobs:
           python-version: "3.10"
 
       - name: install Python deps
-        run: |
-          python -m pip install -U uv
-          nv pip install --system laminci
+        run: pip install -U laminci
 
       - run: nox -s "install(group='docs')"
       - uses: actions/download-artifact@v2
