--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,11 +27,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          cache: "pip"
-          cache-dependency-path: ".github/workflows/build.yml"
 
       - name: cache pre-commit
         uses: actions/cache@v3
@@ -58,14 +56,10 @@ jobs:
         run: docker image load --input ~/postgres.tar
 
       - name: install Python deps
-        run: |
-          python -m pip install -U pip
-          pip install -U laminci
+        run: pip install -U laminci
 
       - name: install postgres graphviz
-        run: |
-          sudo apt-get -y install graphviz
-          sudo apt-get install libpq-dev
+        run: sudo apt-get -y install graphviz
       - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -102,16 +96,12 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-          cache: "pip"
-          cache-dependency-path: ".github/workflows/build.yml"
 
       - name: install Python deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install laminci
+        run: pip install -U laminci
 
       - run: nox -s "install(group='docs')"
       - uses: actions/download-artifact@v2
