--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,10 +96,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-
-      - name: install Python deps
-        run: pip install -U laminci
-
+      - run: pip install "laminci@git+https://x-access-token:${{ secrets.LAMIN_BUILD_DOCS }}@github.com/laminlabs/laminci"
       - run: nox -s "install(group='docs')"
       - uses: actions/download-artifact@v2
       - run: nox -s docs
