🎨 What it should look like
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dev = [
 ]
 
 [tool.ruff]
-src = ["bionty"]
+src = ["lamin_usecases"]
 line-length = 88
 lint.select = [
     "F",  # Errors detected by Pyflakes
