--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dev = [
 ]
 
 [tool.ruff]
-src = ["lamin_usecases"]
+src = ["bionty"]
 line-length = 88
 lint.select = [
     "F",  # Errors detected by Pyflakes
@@ -117,8 +117,3 @@ convention = "google"
 "tests/*" = ["D"]
 "*/__init__.py" = ["F401"]
 "docs/scrna-mappedcollection.ipynb" = ["B007"]
-
-[tool.pytest.ini_options]
-filterwarnings = [
-    "ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning"
-]
