--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,7 @@ _docs_tmp*
 *.fcs
 *.json
 *.ttl
+*.zarr
 data/
 celltypist/
 enrichr/
@@ -139,3 +140,4 @@ docs/input_data_imaging_usecase
 docs/processed_data
 docs/test-imaging
 docs/CellFeaturizer_*/temp_mmap_*.hdf
+run-tests
