--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22-04
     env:
       GITHUB_EVENT_NAME: ${{ github.event_name }}
     strategy:
