--- a/.gitignore
+++ b/.gitignore
@@ -138,6 +138,6 @@ docs/test-perturbation
 test.ipynb
 docs/input_data_imaging_usecase
 docs/processed_data
-docs/test-imaging
+docs/test-sc-imaging
 docs/CellFeaturizer_*/temp_mmap_*.hdf
 run-tests
