--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
           - "by_datatype"
           - "by_registry"
           - "by_ontology"
+          - "sc_imaging"
     timeout-minutes: 40
 
     steps:
@@ -70,7 +71,7 @@ jobs:
       - run: nox -s "build(group='${{ matrix.group }}')"
 
       - name: upload docs
-        if: ${{ matrix.group == 'by_datatype' || matrix.group == 'by_registry' || matrix.group == 'by_ontology'}}
+        if: ${{ matrix.group == 'by_datatype' || matrix.group == 'by_registry' || matrix.group == 'by_ontology' || matrix.group == 'sc_imaging'}}
         uses: actions/upload-artifact@v4
         with:
           name: docs_${{ matrix.group }}
