--- a/.gitignore
+++ b/.gitignore
@@ -140,4 +140,5 @@ docs/input_data_imaging_usecase
 docs/processed_data
 docs/test-sc-imaging
 docs/CellFeaturizer_*/temp_mmap_*.hdf
+docs/test-ehrschema
 run-tests
