✨ By data-type - imaging (#182)
Signed-off-by: Lukas Heumos <lukas.heumos@posteo.net>
Co-authored-by: Sophia Mädler <15019107+sophiamaedler@users.noreply.github.com>
Co-authored-by: Niklas Schmacke <niklas@schmacke.bio>

--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,7 @@ _docs_tmp*
 *.fcs
 *.json
 *.ttl
+*.zarr
 data/
 celltypist/
 enrichr/
@@ -135,3 +136,9 @@ docs/test-facs/
 docs/suo22/
 docs/test-perturbation
 test.ipynb
+docs/input_data_imaging_usecase
+docs/processed_data
+docs/test-sc-imaging
+docs/CellFeaturizer_*/temp_mmap_*.hdf
+docs/test-ehrschema
+run-tests
