--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,20 +9,67 @@ on:
     types: [build]
 
 jobs:
+  pre-filter:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: dorny/paths-filter@v3
+        id: changes
+        if: github.event_name != 'push'
+        with:
+          filters: |
+            spatial:
+              - 'docs/spatial/**'
+              - 'docs/spatial2/**'
+              - 'docs/spatial3/**'
+              - 'docs/spatial4/**'
+            sc_imaging:
+              - 'docs/sc-imaging/**'
+              - 'docs/sc-imaging2/**'
+              - 'docs/sc-imaging3/**'
+              - 'docs/imaging-4/**'
+
+      - id: set-matrix
+        shell: bash
+        run: |
+          BASE_GROUPS=$(jq -n -c '["by_datatype", "by_registry", "by_ontology"]')
+          ADDITIONAL_GROUPS=[]
+
+          if [[ "${{ github.event_name }}" == "push" ]]; then
+            # Run everything on push
+            ADDITIONAL_GROUPS=$(jq -n -c '["spatial", "sc_imaging"]')
+          else
+            # Otherwise check which paths changed
+            if [[ "${{ steps.changes.outputs.spatial }}" == "true" ]]; then
+              ADDITIONAL_GROUPS=$(jq -n -c --argjson groups "$ADDITIONAL_GROUPS" '$groups + ["spatial"]')
+            fi
+            if [[ "${{ steps.changes.outputs.sc_imaging }}" == "true" ]]; then
+              ADDITIONAL_GROUPS=$(jq -n -c --argjson groups "$ADDITIONAL_GROUPS" '$groups + ["sc_imaging"]')
+            fi
+          fi
+
+          # Combine base groups with any additional groups
+          MATRIX=$(jq -n -c --argjson base "$BASE_GROUPS" --argjson additional "$ADDITIONAL_GROUPS" '{group: ($base + $additional)}')
+
+          # Output as single line for GitHub Actions
+          echo "matrix=$(echo "$MATRIX" | jq -c .)" >> $GITHUB_OUTPUT
+          # Pretty print for debugging
+          echo "Generated matrix:"
+          echo "$MATRIX" | jq .
+
   test:
+    needs: pre-filter
     runs-on: ubuntu-latest
     env:
       GITHUB_EVENT_NAME: ${{ github.event_name }}
     strategy:
       fail-fast: false
-      matrix:
-        python-version: ["3.12"]
-        group:
-          - "by_datatype"
-          - "by_registry"
-          - "by_ontology"
-          - "spatial"
-          - "sc_imaging"
+      matrix: ${{fromJson(needs.pre-filter.outputs.matrix)}}
     timeout-minutes: 40
 
     steps:
@@ -31,7 +78,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.12"
 
       - name: cache pre-commit
         uses: actions/cache@v4
