--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,7 +113,7 @@ jobs:
       - run: nox -s "build(group='${{ matrix.group }}')"
 
       - name: upload docs
-        if: ${{ matrix.group == 'by_datatype' || matrix.group == 'by_registry' || matrix.group == 'by_ontology' || matrix.group == 'spatial' || matrix.group == 'sc_imaging'}}
+        if: ${{ matrix.group == 'by_datatype' || matrix.group == 'by_datatype_spatial' || matrix.group == 'by_datatype_sc_imaging' || matrix.group == 'by_registry' || matrix.group == 'by_ontology' }}
         uses: actions/upload-artifact@v4
         with:
           name: docs_${{ matrix.group }}
