--- a/.gitignore
+++ b/.gitignore
@@ -141,4 +141,5 @@ docs/processed_data
 docs/test-sc-imaging
 docs/CellFeaturizer_*/temp_mmap_*.hdf
 docs/test-ehrschema
+docs/test-public-ontologies
 run-tests
